knx-installer (0.4.1.37) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 31 Jan 2007 04:31:36 +0100

knx-installer (0.4.1.36) unstable; urgency=low

  * BUGFIX: really add the desktop manager service to the service whitelist,
    this prevents it from being purged from rc.d system a few lines of code
    down.
  * Purge the DM's rc.d configuration before applying the "lsb" compliant
    configuration, for insurance.

 -- Kel Modderman <kel@otaku42.de>  Wed, 31 Jan 2007 13:09:02 +1000

knx-installer (0.4.1.35) unstable; urgency=low

  * only start display managers in runlevel 5.
  * clarify WM vs. DM confusion.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 30 Jan 2007 16:56:29 +0100

knx-installer (0.4.1.34) unstable; urgency=low

  [ Joaquim Boura ]
  * do not create directories(mountpoints)  for partitions that are used 
    elsewhere.
  * usb-fix-installer had probs with temp directory, use instead directory
    in /media.
  * kdm dependency changed to suggestion.

  [ Kel Modderman ]
  * Don't hack /etc/network/interfaces.

 -- Kel Modderman <kel@otaku42.de>  Tue, 30 Jan 2007 21:34:37 +1000

knx-installer (0.4.1.33) unstable; urgency=low

  * FIXED: installing with a separate /boot
  * FIXED: partitions with duplicate UUID remain with old style fstab entry
  * enhancing readability on a couple of files
  * NEW script to fix an installation on USB-HD

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 28 Jan 2007 01:08:49 +0100

knx-installer (0.4.1.32) unstable; urgency=low

  * Revert kdesu/sudo live specific hack.

 -- Kel Modderman <kel@otaku42.de>  Sat, 27 Jan 2007 02:05:34 +1000

knx-installer (0.4.1.31) unstable; urgency=low

  * Don't trust variable substitution. Add extra check to esure init script
    glob match is actually a file, and then use basename to strip /etc/init.d
    from init pathname to get a service name that update-rc.d knows about.
