@@ -1,3 +1,2 @@
 *-installer	usr/sbin/
 fix-usb-install usr/sbin/
-modules 	usr/share/knx-installer/
