@@ -1,8 +1,18 @@
 knx-installer (0.4.1.37) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 31 Jan 2007 04:31:36 +0100
+  [ Kel Modderman ]
+  * Use hand crafted rules loop to install bash modules with executable bit
+    set.
+  * Disbale perl hack of knx-installer version number, this hack needs to be
+    done differently to work.
+  * Reinstate the saving of the current desktop session.
+  * Suggest 915resolution.
+  * Change default kdm wallapaper to our own.
+
+ -- Kel Modderman <kel@otaku42.de>  Wed, 31 Jan 2007 20:33:05 +1000
 
 knx-installer (0.4.1.36) unstable; urgency=low
 
